[package]
name = "encryption-oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
aes-gcm = "0.10.3"
axum = { version = "0.7.5", features = ["macros"] }
base64 = "0.22.1"
clap = { version = "4.5.13", features = ["derive", "env"] }
generic-array = "1.1.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
utoipa = "5.0.0-alpha.1"
utoipa-swagger-ui = { version = "7.1.1-alpha.0", features = ["axum"] }

[dev-dependencies]
http-body-util = "0.1.2"
mime = "0.3.17"
once_cell = "1.19.0"
test-case = "3.3.1"
tower = { version = "0.4.13", features = ["util"] }
trait-set = "0.3.0"
